--- a/Episodes/indexEpisodios.html
+++ b/Episodes/indexEpisodios.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styleCards.css" />
-    <link rel="stylesheet" href="/styleButton.css">
+    <link rel="stylesheet" href="styleButton.css">
     <title>Document</title>
   </head>
   <body>
